BUGFIX: set scrollbar to auto

--- a/packages/neos-ui/src/Containers/LeftSideBar/NodeTree/style.css
+++ b/packages/neos-ui/src/Containers/LeftSideBar/NodeTree/style.css
@@ -1,4 +1,4 @@
 .pageTree {
-    overflow-y: scroll;
+    overflow-y: auto;
     max-height: calc(50vh - 88px);
 }
